ISSUE #394 - Align left buttons with home button

--- a/frontend/components/right-panel/css/right-panel.css
+++ b/frontend/components/right-panel/css/right-panel.css
@@ -1,7 +1,7 @@
 right-panel {
     position: absolute;
     top: 70px;
-    right: 5px;
+    right: 10px;
 }
 
 right-panel #rightPanelButtons .rightPanelButtonGroup {
